ingress/ingress-design-system-experimentation-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: design-system-experimentation-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - design-system.experimentation.ca
    secretName: design-system-tls-secret-staging
  rules:
  - host: design-system.experimentation.ca
    http:
      paths:
      - backend:
          serviceName: nginx-en
          servicePort: 80
        path: /
